--- a/Group9/Views/Base.lproj/Main.storyboard
+++ b/Group9/Views/Base.lproj/Main.storyboard
@@ -76,6 +76,56 @@
                                     <outlet property="delegate" destination="c9R-Gq-8BI" id="yWM-Hp-lXA"/>
                                 </connections>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pp0-gN-UdP" userLabel="recommendView">
+                                <rect key="frame" x="18" y="797" width="378" height="53"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="store" translatesAutoresizingMaskIntoConstraints="NO" id="2gh-wP-goT">
+                                        <rect key="frame" x="18" y="8" width="36" height="37"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="37" id="aIy-bC-suf"/>
+                                            <constraint firstAttribute="width" constant="36" id="xaU-5p-jfX"/>
+                                        </constraints>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" horizontalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ord-7U-OFb">
+                                        <rect key="frame" x="281" y="8" width="79" height="37"/>
+                                        <color key="backgroundColor" red="0.44705882349999998" green="0.61568627450000002" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="37" id="58Q-4z-wdB"/>
+                                            <constraint firstAttribute="width" constant="79" id="R1G-GE-fhn"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
+                                        <state key="normal" title="Input Place">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <color key="titleShadowColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="inputPlaceAction:" destination="c9R-Gq-8BI" eventType="touchUpInside" id="ne7-Ns-u3v"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Start to support zerowaste community by recommend us someplace you know" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w02-rf-YzD">
+                                        <rect key="frame" x="62" y="8" width="210" height="37"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="37" id="0ed-ah-Gl3"/>
+                                            <constraint firstAttribute="width" constant="210" id="9VG-q9-mgS"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                        <color key="textColor" red="0.21176470589999999" green="0.38431372549999998" blue="0.16862745100000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.86666666670000003" green="0.90980392160000001" blue="0.87058823529999996" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="w02-rf-YzD" firstAttribute="centerY" secondItem="Pp0-gN-UdP" secondAttribute="centerY" id="5tW-cm-vSK"/>
+                                    <constraint firstAttribute="width" constant="378" id="6kp-1f-9Vj"/>
+                                    <constraint firstItem="ord-7U-OFb" firstAttribute="centerY" secondItem="Pp0-gN-UdP" secondAttribute="centerY" id="Ofr-0q-wof"/>
+                                    <constraint firstItem="2gh-wP-goT" firstAttribute="leading" secondItem="Pp0-gN-UdP" secondAttribute="leading" constant="18" id="VoG-zO-DmY"/>
+                                    <constraint firstItem="ord-7U-OFb" firstAttribute="leading" secondItem="w02-rf-YzD" secondAttribute="trailing" constant="9" id="ZRj-aY-4cT"/>
+                                    <constraint firstItem="w02-rf-YzD" firstAttribute="leading" secondItem="2gh-wP-goT" secondAttribute="trailing" constant="8" id="awa-Fk-NXJ"/>
+                                    <constraint firstItem="2gh-wP-goT" firstAttribute="centerY" secondItem="Pp0-gN-UdP" secondAttribute="centerY" id="gWy-90-MrS"/>
+                                    <constraint firstAttribute="trailing" secondItem="ord-7U-OFb" secondAttribute="trailing" constant="18" id="gtK-GG-N4w"/>
+                                    <constraint firstAttribute="height" constant="53" id="lJB-qW-s5f"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -83,6 +133,8 @@
                             <constraint firstAttribute="bottom" secondItem="oyV-gU-2qg" secondAttribute="bottom" id="U8a-EV-mTz"/>
                             <constraint firstItem="oyV-gU-2qg" firstAttribute="leading" secondItem="2zC-A0-Cuo" secondAttribute="leading" id="Xsw-H2-O0g"/>
                             <constraint firstItem="oyV-gU-2qg" firstAttribute="trailing" secondItem="2zC-A0-Cuo" secondAttribute="trailing" id="cdT-ac-oQY"/>
+                            <constraint firstItem="2zC-A0-Cuo" firstAttribute="bottom" secondItem="Pp0-gN-UdP" secondAttribute="bottom" constant="12" id="fwv-VZ-fbt"/>
+                            <constraint firstItem="Pp0-gN-UdP" firstAttribute="centerX" secondItem="2zC-A0-Cuo" secondAttribute="centerX" id="pHR-fK-PC9"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="2zC-A0-Cuo"/>
                     </view>
@@ -100,7 +152,9 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="inputPlace" destination="ord-7U-OFb" id="p15-Ra-FXH"/>
                         <outlet property="nearbyTableView" destination="oyV-gU-2qg" id="olq-dt-3ae"/>
+                        <outlet property="recommendView" destination="Pp0-gN-UdP" id="N06-Ad-Ije"/>
                         <segue destination="KEZ-cI-kLj" kind="show" identifier="webViewSegue" id="pOL-dd-EZV"/>
                         <segue destination="7My-hG-54E" kind="show" identifier="placeDetail" id="pHl-Gk-nhF"/>
                         <segue destination="yZh-k8-TS2" kind="show" identifier="seeAllByCategory" id="Dmc-Rt-Z64"/>
@@ -187,6 +241,7 @@
     </scenes>
     <resources>
         <image name="Fill 5" width="31" height="31"/>
+        <image name="store" width="36" height="37"/>
         <namedColor name="westly green drak">
             <color red="0.21176470588235294" green="0.3843137254901961" blue="0.16862745098039217" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
