--- a/Group9/Views/Base.lproj/Main.storyboard
+++ b/Group9/Views/Base.lproj/Main.storyboard
@@ -79,13 +79,6 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pp0-gN-UdP" userLabel="recommendView">
                                 <rect key="frame" x="18" y="797" width="378" height="53"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="store" translatesAutoresizingMaskIntoConstraints="NO" id="2gh-wP-goT">
-                                        <rect key="frame" x="18" y="8" width="36" height="37"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="37" id="aIy-bC-suf"/>
-                                            <constraint firstAttribute="width" constant="36" id="xaU-5p-jfX"/>
-                                        </constraints>
-                                    </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" horizontalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ord-7U-OFb">
                                         <rect key="frame" x="281" y="8" width="79" height="37"/>
                                         <color key="backgroundColor" red="0.44705882349999998" green="0.61568627450000002" blue="0.22352941179999999" alpha="1" colorSpace="calibratedRGB"/>
@@ -102,13 +95,13 @@
                                             <action selector="inputPlaceAction:" destination="c9R-Gq-8BI" eventType="touchUpInside" id="ne7-Ns-u3v"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Start to support zerowaste community by recommend us someplace you know" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w02-rf-YzD">
-                                        <rect key="frame" x="62" y="8" width="210" height="37"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Start to support zerowaste community by recommend us someplace you know!" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w02-rf-YzD">
+                                        <rect key="frame" x="8" y="8" width="259" height="37"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="37" id="0ed-ah-Gl3"/>
-                                            <constraint firstAttribute="width" constant="210" id="9VG-q9-mgS"/>
+                                            <constraint firstAttribute="height" constant="37" id="5QF-CZ-DxC"/>
+                                            <constraint firstAttribute="width" constant="259" id="MzM-cu-qZF"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <color key="textColor" red="0.21176470589999999" green="0.38431372549999998" blue="0.16862745100000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -117,11 +110,8 @@
                                 <constraints>
                                     <constraint firstItem="w02-rf-YzD" firstAttribute="centerY" secondItem="Pp0-gN-UdP" secondAttribute="centerY" id="5tW-cm-vSK"/>
                                     <constraint firstAttribute="width" constant="378" id="6kp-1f-9Vj"/>
+                                    <constraint firstItem="ord-7U-OFb" firstAttribute="leading" secondItem="w02-rf-YzD" secondAttribute="trailing" constant="14" id="Cfg-st-9q0"/>
                                     <constraint firstItem="ord-7U-OFb" firstAttribute="centerY" secondItem="Pp0-gN-UdP" secondAttribute="centerY" id="Ofr-0q-wof"/>
-                                    <constraint firstItem="2gh-wP-goT" firstAttribute="leading" secondItem="Pp0-gN-UdP" secondAttribute="leading" constant="18" id="VoG-zO-DmY"/>
-                                    <constraint firstItem="ord-7U-OFb" firstAttribute="leading" secondItem="w02-rf-YzD" secondAttribute="trailing" constant="9" id="ZRj-aY-4cT"/>
-                                    <constraint firstItem="w02-rf-YzD" firstAttribute="leading" secondItem="2gh-wP-goT" secondAttribute="trailing" constant="8" id="awa-Fk-NXJ"/>
-                                    <constraint firstItem="2gh-wP-goT" firstAttribute="centerY" secondItem="Pp0-gN-UdP" secondAttribute="centerY" id="gWy-90-MrS"/>
                                     <constraint firstAttribute="trailing" secondItem="ord-7U-OFb" secondAttribute="trailing" constant="18" id="gtK-GG-N4w"/>
                                     <constraint firstAttribute="height" constant="53" id="lJB-qW-s5f"/>
                                 </constraints>
@@ -242,7 +232,6 @@
     </scenes>
     <resources>
         <image name="Fill 5" width="31" height="31"/>
-        <image name="store" width="36" height="37"/>
         <namedColor name="westly green drak">
             <color red="0.21176470588235294" green="0.3843137254901961" blue="0.16862745098039217" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
