--- a/Group9/Views/Profile.storyboard
+++ b/Group9/Views/Profile.storyboard
@@ -19,45 +19,74 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="daD-bv-AGt">
-                                <rect key="frame" x="18" y="119" width="108" height="36"/>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
-                                <state key="normal" title="My Account">
-                                    <color key="titleColor" red="0.44993996619999999" green="0.619758904" blue="0.22342342139999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                </state>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="NTD-YV-KCZ">
+                                <rect key="frame" x="20" y="88" width="374" height="162"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="162" id="iWm-FP-iku"/>
+                                </constraints>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="profileCell" id="Ydq-M9-gJh">
+                                        <rect key="frame" x="0.0" y="28" width="374" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Ydq-M9-gJh" id="l2A-Je-8ko">
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="yEQ-dc-GY5">
+                                        <rect key="frame" x="0.0" y="72" width="374" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="yEQ-dc-GY5" id="Ehh-ds-aaV">
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="82V-M2-Gmm">
+                                        <rect key="frame" x="0.0" y="116" width="374" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="82V-M2-Gmm" id="ANQ-Rt-t31">
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="15" minValue="5" maxValue="25" translatesAutoresizingMaskIntoConstraints="NO" id="Dx7-cX-hCJ">
+                                <rect key="frame" x="28" y="345" width="288" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="29" id="aap-05-EPo"/>
+                                </constraints>
                                 <connections>
-                                    <action selector="accountAction:" destination="rcK-V9-5VB" eventType="touchUpInside" id="Ujp-yn-c45"/>
+                                    <action selector="distanceSliderAction:" destination="rcK-V9-5VB" eventType="valueChanged" id="Ghp-oP-UiV"/>
                                 </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="m0V-V6-ZwT">
-                                <rect key="frame" x="18" y="175" width="82" height="36"/>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
-                                <state key="normal" title="Favorites">
-                                    <color key="titleColor" red="0.44993996619999999" green="0.619758904" blue="0.22342342139999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                </state>
-                                <connections>
-                                    <segue destination="vta-Wb-gI3" kind="show" id="WU6-R4-m7S"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dfK-HX-z5L">
-                                <rect key="frame" x="18" y="231" width="84" height="36"/>
-                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
-                                <state key="normal" title="About Us">
-                                    <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <state key="disabled">
-                                    <color key="titleColor" red="0.64706772570000004" green="0.64704281090000004" blue="0.64705973859999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                </state>
-                            </button>
+                            </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Place Search Distance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D36-DS-kpj">
+                                <rect key="frame" x="20" y="300" width="171" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Za-NW-Hr2">
+                                <rect key="frame" x="342" y="349" width="42" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="daD-bv-AGt" firstAttribute="top" secondItem="KFX-HG-pYE" secondAttribute="top" constant="31" id="7S2-Jd-QKg"/>
-                            <constraint firstItem="dfK-HX-z5L" firstAttribute="leading" secondItem="KFX-HG-pYE" secondAttribute="leading" constant="18" id="XNc-8Q-vEb"/>
-                            <constraint firstItem="dfK-HX-z5L" firstAttribute="top" secondItem="m0V-V6-ZwT" secondAttribute="bottom" constant="20" id="bOF-cV-vuI"/>
-                            <constraint firstItem="m0V-V6-ZwT" firstAttribute="leading" secondItem="KFX-HG-pYE" secondAttribute="leading" constant="18" id="es1-64-4jK"/>
-                            <constraint firstItem="m0V-V6-ZwT" firstAttribute="top" secondItem="daD-bv-AGt" secondAttribute="bottom" constant="20" id="v5S-rU-pTS"/>
-                            <constraint firstItem="daD-bv-AGt" firstAttribute="leading" secondItem="KFX-HG-pYE" secondAttribute="leading" constant="18" id="yvl-cq-c83"/>
+                            <constraint firstItem="D36-DS-kpj" firstAttribute="leading" secondItem="KFX-HG-pYE" secondAttribute="leading" constant="20" id="1dd-K0-mEc"/>
+                            <constraint firstItem="NTD-YV-KCZ" firstAttribute="leading" secondItem="KFX-HG-pYE" secondAttribute="leading" constant="20" id="5Z9-6o-mi3"/>
+                            <constraint firstItem="8Za-NW-Hr2" firstAttribute="leading" secondItem="Dx7-cX-hCJ" secondAttribute="trailing" constant="28" id="DOa-TK-y0V"/>
+                            <constraint firstItem="D36-DS-kpj" firstAttribute="top" secondItem="NTD-YV-KCZ" secondAttribute="bottom" constant="50" id="ELb-kD-Wgd"/>
+                            <constraint firstItem="Dx7-cX-hCJ" firstAttribute="leading" secondItem="KFX-HG-pYE" secondAttribute="leading" constant="30" id="Oac-Q4-qfL"/>
+                            <constraint firstItem="NTD-YV-KCZ" firstAttribute="top" secondItem="KFX-HG-pYE" secondAttribute="top" id="VqC-vd-Jps"/>
+                            <constraint firstItem="8Za-NW-Hr2" firstAttribute="top" secondItem="NTD-YV-KCZ" secondAttribute="bottom" constant="99" id="afz-VF-GhU"/>
+                            <constraint firstItem="KFX-HG-pYE" firstAttribute="trailing" secondItem="8Za-NW-Hr2" secondAttribute="trailing" constant="30" id="d4a-iT-tDN"/>
+                            <constraint firstItem="KFX-HG-pYE" firstAttribute="trailing" secondItem="Dx7-cX-hCJ" secondAttribute="trailing" constant="100" id="fDv-b2-vYp"/>
+                            <constraint firstItem="KFX-HG-pYE" firstAttribute="trailing" secondItem="NTD-YV-KCZ" secondAttribute="trailing" constant="20" id="njC-WI-eGG"/>
+                            <constraint firstItem="Dx7-cX-hCJ" firstAttribute="top" secondItem="D36-DS-kpj" secondAttribute="bottom" constant="24" id="tId-Fs-B2q"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="KFX-HG-pYE"/>
                     </view>
@@ -70,15 +99,17 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="accountButton" destination="daD-bv-AGt" id="qPQ-6f-M7b"/>
-                        <outlet property="favoriteButton" destination="m0V-V6-ZwT" id="NgB-jw-Nmf"/>
+                        <outlet property="distanceLabel" destination="8Za-NW-Hr2" id="TWa-ZT-qTe"/>
+                        <outlet property="distanceSlider" destination="Dx7-cX-hCJ" id="oNk-2b-Jeg"/>
+                        <outlet property="tableView" destination="NTD-YV-KCZ" id="9QI-Qx-iy9"/>
                         <segue destination="Ox2-tl-aC2" kind="show" identifier="SignInSegue" animates="NO" id="ou4-ny-Fcf"/>
                         <segue destination="abl-MW-7PS" kind="show" identifier="myAccountSegue" id="aDx-jE-dx8"/>
+                        <segue destination="vta-Wb-gI3" kind="show" identifier="favorites" id="U8w-vC-5Po"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xgP-bh-1Sl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="973.91304347826099" y="-151.33928571428569"/>
+            <point key="canvasLocation" x="677" y="-182"/>
         </scene>
         <!--MyFavorites-->
         <scene sceneID="h8I-VR-C4n">
@@ -110,7 +141,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zzp-6E-gBB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="974" y="596"/>
+            <point key="canvasLocation" x="800" y="543"/>
         </scene>
         <!--My Account-->
         <scene sceneID="FLb-0O-BxW">
@@ -652,7 +683,7 @@ Fields marked * are mandatory</string>
                 <viewControllerPlaceholder storyboardName="Main" id="bXS-dB-kWI" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CCF-z9-Za9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="568" y="-551"/>
+            <point key="canvasLocation" x="1139" y="-556"/>
         </scene>
     </scenes>
     <resources>
